<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">encrypt</string>
    <string name="version">2015.01.1</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>

    <string name="please_wait">Please wait …</string>
    <string name="about">About</string>
    <string name="description">encrypt ~ a cross platform, symmetric key, file encryption application</string>
    <string name="copyright">Copyright © 2004–2015, albinoloverats ~ Software Development</string>
    <string name="url">https://albinoloverats.net/projects/encrypt</string>

    <string name="options">Options</string>
    <string name="compress">Compression</string>
    <string name="follow">Follow Symlinks</string>
    <string name="key_file">Key File</string>
    <string name="password">Password</string>

    <string name="advanced">Advanced</string>
    <string name="raw">Raw</string>
    <string name="compatibility">Compatibility</string>

    <string name="use_key_file">Using Key File</string>
    <string name="use_password">Using Password</string>

    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="encrypting">Encrypting</string>
    <string name="decrypting">Decrypting</string>

    <!-- success and running states -->
    <string name="success">Success</string>
    <string name="init">Initialisation</string>
    <string name="cancelled">Cancelled</string>
    <string name="running">Running</string>
    <!-- failure with compatibility mode and directories -->
    <string name="failed_compatibility">Failed: Compatibility mode cannot encrypt directories!</string>
    <!-- failures - decryption did not complete -->
    <string name="failed_init">Failed: Invalid initialisation parameters!</string>
    <string name="failed_unknown_version">Failed: Unsupported version!</string>
    <string name="failed_unknown_algorithm">Failed: Unsupported algorithm!</string>
    <string name="failed_decryption">Failed: Decryption failure!\n(Invalid password)</string>
    <string name="failed_unknown_tag">Failed: Unsupported feature!</string>
    <string name="failed_io">Failed: Read/Write error!</string>
    <string name="failed_key">Failed: Key generation error!</string>
    <string name="failed_output_mismatch">Failed: Invalid target file type!</string>
    <string name="failed_compression_error">Failed: Compression Error!</string>
    <string name="failed_other">Failed An unknown error has occurred!</string>
    <!-- warnings - decryption finished but with possible errors -->
    <string name="warning_checksum">Warning: Bad checksum!\n(Possible data corruption)</string>
    <string name="warning_link">Warning: Could not extract all files!\n(Links are unsupported)</string>
    <!-- error message specific to Android -->
    <string name="fatal_memory">Out of memory!\n(Try turning off compression)</string>

    <string name="choose_source">Choose Source</string>
    <string name="choose_cipher">Choose Cipher</string>
    <string name="choose_hash">Choose Hash</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="choose_output">Choose Output</string>
    <string name="choose_key">Choose Key</string>

    <string name="location">Location</string>
    <string name="cant_read_folder">Folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="red">#b22222</color>
    <string name="err">Error</string>
</resources>
